--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" />
-    <meta name="description" content="Rivet - AI prompt chain and AI agent IDE" />
+    <meta name="description" content="Volume Designer - AI prompt chain and AI agent IDE" />
     <link rel="apple-touch-icon" href="/Square284x284Logo.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Rivet</title>
+    <title>Volume Designer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
